<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="txtBillAmount">Bill Amount: </string>
    <string name="enterBillAmount">Enter Your Bill Amount</string>
    <string name="roundToDollar">Round to nearest dollar</string>
    <string name="btnCalculate">Calculate</string>
    <string name="txtTipResult">Tip: </string>


</resources>
