<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <TextView
        android:id="@+id/txtBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBillAmount"
        android:textStyle="bold" />"

    <EditText
        android:id="@+id/edtBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txtBillAmount"
        android:layout_toRightOf="@id/txtBillAmount"
        android:hint="@string/enterBillAmount" 
        android:inputType="numberDecimal" />
    
    <CheckBox
        android:id="@+id/chkRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBillAmount"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/roundToDollar" />

    <Button
      	android:id="@+id/btnCalculate"
      	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chkRound"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/btnCalculate" />
    
    <TextView
        android:id="@+id/txtTipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTipResult"
        android:layout_below="@id/btnCalculate"
        android:layout_marginTop="@dimen/calc_tip_margin" />
        "
</RelativeLayout>
